# oc-botwatch

./: .gitignore  .gitmodules  LICENSE  README.md  REUSE.toml  analyze_traffic.py  pyproject.toml  supplementary_bots.txt
.github/workflows/: test.yml
oc_botwatch/: __init__.py  classify.py  visualize.py
output/: daily_traffic.csv  daily_traffic_by_service.csv
tests/: test_integration.py
