[project]
name = "oc-botwatch"
version = "0.1.0"
description = "Monitor AI and generic bot activity in OpenCitations web access logs"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "polars>=1.40.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.13",
]

[tool.pyright]
typeCheckingMode = "strict"
reportUnknownMemberType = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
